--- a/index.html
+++ b/index.html
@@ -291,6 +291,15 @@
             </form>
         </div>
 
+        <div class="form-section">
+            <h2>Get News</h2>
+            <form id="get-news-form">
+                <input type="text" id="news-query" placeholder="Search for news..." required>
+                <button type="submit">Get News</button>
+            </form>
+            <div id="news-results" style="margin-top: 1.5em;"></div>
+        </div>
+
         <div class="articles-section">
             <h2>Saved Articles</h2>
             <button id="view-articles">Show Articles</button>
@@ -352,6 +361,10 @@
             const viewDefinitionsBtn = document.getElementById('view-definitions');
             const definitionsModal = document.getElementById('definitions-modal');
             const closeBtn = document.querySelector('.close-btn');
+            const getNewsForm = document.getElementById('get-news-form');
+            const newsQueryInput = document.getElementById('news-query');
+            const newsResults = document.getElementById('news-results');
+            const newsApiKey = '8f51adebb6f54e3da3861e73e3efa150';
 
             async function checkHealth() {
                 try {
@@ -432,6 +445,56 @@
                 } catch (error) {
                     console.error('Error:', error);
                     showToast('Error connecting to the server.', 'error');
+                }
+            });
+
+            getNewsForm.addEventListener('submit', async function(event) {
+                event.preventDefault();
+                const query = newsQueryInput.value;
+                if (!query) return;
+
+                const newsApiUrl = `https://newsapi.org/v2/everything?q=${encodeURIComponent(query)}&apiKey=${newsApiKey}`;
+
+                try {
+                    const response = await fetch(newsApiUrl);
+                    const data = await response.json();
+
+                    if (data.status === 'ok') {
+                        displayNews(data.articles);
+                    } else {
+                        showToast(`Error fetching news: ${data.message}`, 'error');
+                    }
+                } catch (error) {
+                    console.error('Error fetching news:', error);
+                    showToast('Could not connect to NewsAPI.', 'error');
+                }
+            });
+
+            function displayNews(articles) {
+                newsResults.innerHTML = '';
+                if (articles.length === 0) {
+                    newsResults.innerHTML = '<p>No articles found for your query.</p>';
+                    return;
+                }
+
+                articles.slice(0, 10).forEach(article => {
+                    const articleDiv = document.createElement('div');
+                    articleDiv.className = 'article';
+                    articleDiv.innerHTML = `
+                        <h3><a href="${article.url}" target="_blank" rel="noopener noreferrer">${article.title}</a></h3>
+                        <p>${article.description || 'No description available.'}</p>
+                        <button class="fill-form-btn" data-url="${article.url}" data-content="${article.content || article.description || ''}">Fill Form</button>
+                    `;
+                    newsResults.appendChild(articleDiv);
+                });
+            }
+
+            newsResults.addEventListener('click', function(event) {
+                if (event.target.classList.contains('fill-form-btn')) {
+                    const button = event.target;
+                    document.getElementById('url').value = button.dataset.url;
+                    document.getElementById('news_article').value = button.dataset.content;
+                    window.scrollTo({ top: 0, behavior: 'smooth' });
                 }
             });
 
