--- a/index.html
+++ b/index.html
@@ -364,7 +364,6 @@
             const getNewsForm = document.getElementById('get-news-form');
             const newsQueryInput = document.getElementById('news-query');
             const newsResults = document.getElementById('news-results');
-            const newsApiKey = '8f51adebb6f54e3da3861e73e3efa150';
 
             async function checkHealth() {
                 try {
@@ -453,20 +452,20 @@
                 const query = newsQueryInput.value;
                 if (!query) return;
 
-                const newsApiUrl = `https://newsapi.org/v2/everything?q=${encodeURIComponent(query)}&apiKey=${newsApiKey}`;
+                const newsApiUrl = `${apiUrl}/news?q=${encodeURIComponent(query)}`;
 
                 try {
                     const response = await fetch(newsApiUrl);
                     const data = await response.json();
 
-                    if (data.status === 'ok') {
+                    if (response.ok) {
                         displayNews(data.articles);
                     } else {
-                        showToast(`Error fetching news: ${data.message}`, 'error');
+                        showToast(`Error fetching news: ${data.detail}`, 'error');
                     }
                 } catch (error) {
                     console.error('Error fetching news:', error);
-                    showToast('Could not connect to NewsAPI.', 'error');
+                    showToast('Could not connect to the news service.', 'error');
                 }
             });
 
